--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
+    "@react-navigation/stack": "^7.2.0",
     "date-fns": "^4.1.0",
     "expo": "^52.0.16",
     "expo-constants": "~17.0.2",
