--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.2.0",
     "date-fns": "^4.1.0",
+    "eventemitter": "^0.3.3",
     "expo": "^52.0.16",
     "expo-constants": "~17.0.2",
     "expo-in-app-purchases": "^14.5.0",
