** Fixes in display of level up notifications ** -- Added a new notification component for level up achievements -- Fix challenges not being displayed correctly

--- a/app.json
+++ b/app.json
@@ -9,11 +9,27 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.cristianortega.flexbreak",
+      "googleServicesFile": "./GoogleService-Info.plist"
     },
     "android": {
+      "package": "com.cristianortega.flexbreak"
     },
     "web": {
+    },
+    "plugins": [
+      [
+        "expo-notifications",
+        {
+          "color": "#ffffff"
+        }
+      ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "flexbreak-28ad0"
+      }
     }
   }
 }
