--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -22,13 +22,15 @@
     "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.2",
-    "expo-notifications": "^0.29.13",
+    "expo-notifications": "^0.29.14",
     "expo-router": "~4.0.2",
     "expo-sharing": "^13.0.1",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "^4.0.8",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "^15.4.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
