--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eventemitter": "^0.3.3",
     "expo": "^52.0.16",
     "expo-constants": "~17.0.2",
+    "expo-haptics": "^14.0.1",
     "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.2",
@@ -36,6 +37,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-tab-view": "^4.0.7",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
