--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-tab-view": "^4.0.7",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-toast-notifications": "^3.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
