--- a/package.json
+++ b/package.json
@@ -29,20 +29,25 @@
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "^4.0.8",
+    "install": "^0.13.0",
+    "npm": "^11.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-i18next": "^15.4.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-draggable-flatlist": "^2.6.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "^3.17.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-tab-view": "^4.0.7",
-    "react-native-web": "~0.19.6",
-    "react-native-toast-notifications": "^3.3.1"
+    "react-native-toast-notifications": "^3.3.1",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/cli": "^18.0.0",
     "@types/react": "~18.3.12",
     "typescript": "^5.3.3"
   },
