--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-picker/picker": "^2.11.0",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.2.0",
@@ -24,6 +25,7 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.2",
     "expo-notifications": "^0.29.14",
+    "expo-permissions": "^14.4.0",
     "expo-router": "~4.0.2",
     "expo-sharing": "^13.0.1",
     "expo-splash-screen": "~0.29.7",
@@ -35,9 +37,12 @@
     "react-dom": "18.3.1",
     "react-i18next": "^15.4.1",
     "react-native": "0.76.3",
+    "react-native-animatable": "^1.4.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^2.6.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-modal": "^14.0.0-rc.1",
+    "react-native-permissions": "^5.3.0",
     "react-native-reanimated": "^3.17.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
@@ -49,6 +54,7 @@
     "@babel/core": "^7.20.0",
     "@react-native-community/cli": "^18.0.0",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
     "typescript": "^5.3.3"
   },
   "private": true
