** Changes and improvements ** -- Added sound effects -- Added intro screen -- Added favorites screen -- Added settings screen -- Added level up notification -- Added streak freeze sound -- Added xp boost sound

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "eventemitter": "^0.3.3",
     "expo": "^52.0.16",
+    "expo-av": "^15.0.2",
     "expo-constants": "~17.0.2",
     "expo-haptics": "^14.0.1",
     "expo-in-app-purchases": "^14.5.0",
