--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^2.6.2",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-iap": "^12.16.2",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-permissions": "^5.3.0",
     "react-native-reanimated": "^3.17.2",
