--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo": "^52.0.16",
     "expo-av": "^15.0.2",
     "expo-constants": "~17.0.2",
+    "expo-dev-client": "~5.0.20",
     "expo-haptics": "^14.0.1",
     "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "^14.0.2",
@@ -48,9 +49,11 @@
     "react-native-iap": "^12.16.2",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-permissions": "^5.3.0",
+    "react-native-purchases": "^8.9.5",
     "react-native-reanimated": "^3.17.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-svg": "^15.11.2",
     "react-native-tab-view": "^4.0.7",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.19.6",
