--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "deskstretch",
+  "name": "flexbreak",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -12,59 +12,35 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-community/slider": "^4.5.6",
-    "@react-native-picker/picker": "^2.11.0",
-    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.2.0",
     "@reduxjs/toolkit": "^2.6.1",
-    "date-fns": "^4.1.0",
-    "eventemitter": "^0.3.3",
     "expo": "^52.0.16",
     "expo-av": "^15.0.2",
     "expo-constants": "~17.0.2",
-    "expo-dev-client": "~5.0.20",
     "expo-haptics": "^14.0.1",
     "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "^14.0.2",
-    "expo-linking": "~7.0.2",
     "expo-notifications": "^0.29.14",
     "expo-permissions": "^14.4.0",
-    "expo-router": "~4.0.2",
-    "expo-sharing": "^13.0.1",
-    "expo-splash-screen": "~0.29.7",
-    "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "^4.0.8",
-    "install": "^0.13.0",
-    "npm": "^11.2.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-i18next": "^15.4.1",
     "react-native": "0.76.3",
-    "react-native-animatable": "^1.4.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-draggable-flatlist": "^2.6.2",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-iap": "^12.16.2",
-    "react-native-modal": "^14.0.0-rc.1",
-    "react-native-permissions": "^5.3.0",
-    "react-native-purchases": "^8.9.5",
-    "react-native-reanimated": "^3.17.2",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-svg": "^15.11.2",
-    "react-native-tab-view": "^4.0.7",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.19.6",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.26.10",
     "@react-native-community/cli": "^18.0.0",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   },
   "private": true
 }
