--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "jsx": "react-native",
+    "esModuleInterop": true,
+    "resolveJsonModule": true
+  },
   "extends": "expo/tsconfig.base"
 }
