** Starting notifications ** -- Added firebase and expo notifications -- Added test notifications screen -- Added fcmService -- Added notificationBridge -- Added notificationTester -- Added firebase.ts -- Added iapService.ts

--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@reduxjs/toolkit": "^2.6.1",
     "expo": "^52.0.16",
     "expo-av": "^15.0.2",
-    "expo-constants": "~17.0.2",
+    "expo-constants": "~17.0.8",
+    "expo-dev-client": "~5.0.20",
+    "expo-device": "~7.0.3",
     "expo-haptics": "^14.0.1",
     "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "^14.0.2",
     "expo-notifications": "^0.29.14",
     "expo-permissions": "^14.4.0",
+    "firebase": "^11.6.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
