--- a/app.json
+++ b/app.json
@@ -29,23 +29,12 @@
     "web": {},
     "plugins": [
       "expo-dev-client",
-      "@react-native-firebase/app",
       [
-        "@react-native-firebase/auth",
+        "expo-notifications",
         {
-          "appId": "1:1033066069126:ios:2b3ecbc0c5ef94df14c06e", 
-          "apiKey": "AIzaSyA5kJDW8QNfkpGJu7QixTIAdnZm4pOi5f8", 
-          "projectId": "flexbreak-28ad0",
-          "androidClientId": "1033066069126-m2r4kofhdqpvs4qfve4gg83ouvnrn6r4.apps.googleusercontent.com", 
-          "iosClientId": "1033066069126-0osjfvf74qa29qdlsnca8vu4j2j3aenk.apps.googleusercontent.com"
-        }
-      ],
-      "@react-native-firebase/firestore",
-      "@react-native-firebase/functions",
-      [
-        "@react-native-firebase/messaging",
-        {
-          "presentationOptions": ["badge", "sound", "alert"]
+          "icon": "./assets/images/potentialLogo2.png",
+          "color": "#ffffff",
+          "sounds": ["./assets/sounds/notification.wav"]
         }
       ]
     ],
