--- a/package.json
+++ b/package.json
@@ -12,26 +12,23 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-firebase/app": "^22.1.0",
-    "@react-native-firebase/auth": "^22.1.0",
-    "@react-native-firebase/firestore": "^22.1.0",
-    "@react-native-firebase/functions": "^22.1.0",
-    "@react-native-firebase/messaging": "^22.1.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.2.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "eas-cli": "^16.4.0",
     "expo": "^52.0.16",
     "expo-av": "^15.0.2",
     "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.20",
     "expo-device": "~7.0.3",
+    "expo-firebase-core": "^8.0.0",
     "expo-haptics": "^14.0.1",
     "expo-in-app-purchases": "^14.5.0",
     "expo-linear-gradient": "^14.0.2",
-    "expo-notifications": "^0.29.14",
+    "expo-notifications": "~0.29.14",
     "expo-permissions": "^14.4.0",
-    "firebase": "^11.6.1",
+    "firebase": "^9.19.1",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
