--- a/app.json
+++ b/app.json
@@ -12,7 +12,6 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.cristianortega.flexbreak",
-      "googleServicesFile": "./GoogleService-Info.plist",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "UIBackgroundModes": ["remote-notification"]
@@ -23,8 +22,7 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/potentialLogo2.png",
         "backgroundColor": "#ffffff"
-      },
-      "googleServicesFile": "./google-services.json"
+      }
     },
     "web": {},
     "plugins": [
@@ -33,8 +31,7 @@
         "expo-notifications",
         {
           "icon": "./assets/images/potentialLogo2.png",
-          "color": "#ffffff",
-          "sounds": ["./assets/sounds/notification.wav"]
+          "color": "#ffffff"
         }
       ]
     ],
