--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^1.9.0",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1"
   },
