--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-svg": "^15.11.2",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.19.6",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "@react-native-community/slider": "4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
