--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-svg": "^15.11.2",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.19.6",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-native-reanimated": "~3.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
