** Small changes before the launch **

--- a/app.json
+++ b/app.json
@@ -19,6 +19,9 @@
       },
       "splash": {
         "xib": "./ios/FlexBreak/SplashScreen.storyboard"
+      },
+      "config": {
+        "usesGameCenter": true
       }
     },
     "android": {
